Atualizacao no cadastro de matricula